--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 	<link rel="stylesheet" href="App.css">
   </head>
   <body>
-	<div id="App"></div>
+    <div id="header">
+	  <ul>
+		<li><a class="activemenu" href="">Sample 1</a></li>
+		<li><a href="">Sample 2</a></li>
+		<li><a href="">Sample 3</a></li>
+		<li><a href="">Sample 4</a></li>
+		<li><a href="">Sample 5</a></li>
+	  </ul>
+	  <p>For browser support ES6 only</p>
+	</div>
+  	<div id="App"></div>
 	<script src="App.js"></script>
+    <div id="footer">
+	</div>
   </body>
 </html>
