--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <div id="header">
 	  <ul>
-		<li><a class="activemenu" href="">Sample 1</a></li>
-		<li><a href="">Sample 2</a></li>
-		<li><a href="">Sample 3</a></li>
-		<li><a href="">Sample 4</a></li>
-		<li><a href="">Sample 5</a></li>
+		<li><a class="activemenu" href="">Food</a></li>
+		<li><a href="stock-quote.html">Stock Quote</a></li>
+		<li><a href="">...</a></li>
+		<li><a href="">...</a></li>
+		<li><a href="">...</a></li>
 	  </ul>
 	  <p>For browser support ES6 only</p>
 	</div>
